tests/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0080]: modifying a static's initial value from another static's initializer
  --> $DIR/mod-static-with-const-fn.rs:14:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^ evaluation of `BAR` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
